2012-09-10  Patrice Dumas  <pertusus@free.fr>

	* util/texinfo.dtd: update.

2012-09-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Overview): mention txixml2texi.

	* doc/texinfo.txi (Functions Commands): recommend @code rather
	than @var to avoid en-dashes and em-dashes (and Spanish ligatures)
	in formal parameter names containing 2+ hyphens.

2012-09-10  Patrice Dumas  <pertusus@free.fr>

	* util/Makefile.am, util/txixml2texi.pl, TODO: add a new script,
	txixml2texi that convert Texinfo XML to Texinfo code.

2012-09-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (acronym): mention likely desirability
	of not using it, and that is the recommendation for GNU manuals.
	Suggestion from John Darrington, 24 Aug 2012 06:53:29.

	* doc/texinfo.txi (table): new commands defined with @macro
	don't usually work as the argument to @table.
	(@@asis): Use @code{@@asis} for anchor name.

2012-09-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (txicmd): skip putting @-commands in a new
	index, just keep using fn and put up with the @def... example
	identifiers showing up there.
	(throughout): consistently use whole-manual cross references.

2012-09-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (title subtitle author): @* breaks in the title
	will be respected in HTML unless conditionalized.

	* doc/texinfo.txi: "an @code{@@", not "a" throughout; ditto @samp.

2012-09-06  Patrice Dumas  <pertusus@free.fr>
        and Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: updates throughout.
	Use @. where needed.

2012-09-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\chapheadingzzz, \chapmacro): use
	\raggedtitlesettings, do more to avoid breaks after.
	(\unnchfopen, \centerchfopen): likewise, although these chapter
	styles are not used and not supported.

2012-09-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\raggedtitlesettings): new macro.
	(\title): call it, and typeset the title inside a \vbox,
	so a long title can be broken with @*